fix story page to not have weird spacing

--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,11 @@ img {
   max-width: 800px;
   margin: 0 auto;
 }
+.sidebar-positioner {
+  width: 0px;
+  height: 0px;
+  position: relative;
+}
 
 a:visited {
   color: white;
@@ -380,7 +385,7 @@ body {
   top: 50px;
   left: -200px;
   max-width: 150px;
-  position: relative;
+  position: absolute;
   background-color: white;
   border: 1px solid black;
 }
